--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
         <div id="minutos">00</div>:<div id="segundos">00</div>
     </div>
     <div class="controls">
-        <!-- Nuevos botones para establecer minutos y segundos -->
-        <button id="setMinutes">Set Minutes</button>
-        <button id="setSeconds">Set Seconds</button>
-
-        <!-- Botones existentes -->
-        <button id="pausar">Pausar</button>
-        <button id="reanudar" disabled>Reanudar</button>
+        <div class="button-group">
+            <button id="setMinutes">Set Minutes</button>
+            <button id="setSeconds">Set Seconds</button>
+        </div>
+        <div class="button-group">
+            <button id="pausar">Pausar</button>
+            <button id="reanudar" disabled>Reanudar</button>
+        </div>
         <button id="reiniciar">Reiniciar</button>
     </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
